--- a/css/style.css
+++ b/css/style.css
@@ -331,7 +331,12 @@ div#container:has(.sesiones) {
     background-color: var(--dark-color-transparent);
     border-radius: var(--radius-small);
     position: relative; 
-    animation: slideInFromLeft ease-in-out forwards;
+    animation: slideInFromLeft ease-in-out both;
+    /* 
+    animation-timeline: scroll();
+    animation-timeline: view();
+    animation-range: entry;
+   */
 }
 
 .block .row {
@@ -340,11 +345,16 @@ div#container:has(.sesiones) {
 }
 
 .block:has(.row.center){
-    animation: slideInFromRight 0.8s linear forwards;
+    animation: slideInFromRight 0.8s ease-in-out both;
 }
 
 .block:has(.row.reverse){
-    animation: slideInFromRight ease-in-out forwards;
+    animation: slideInFromRight ease-in-out both;
+    /* 
+    animation-timeline: scroll();
+    animation-timeline: view();
+    animation-range: entry;
+   */
 }
 
 .block .content-inner-left,
@@ -419,7 +429,7 @@ div#container:has(.sesiones) {
   0% {
     transform: translateX(-100%);
   }
-  50% {
+  80% {
     transform: translateX(0);
     opacity: 1;
   }
@@ -430,7 +440,7 @@ div#container:has(.sesiones) {
     transform: translateX(100%);
     opacity: 0;
   }
-  50% {
+  80% {
     transform: translateX(0);
     opacity: 1;
   }
