--- a/css/style.css
+++ b/css/style.css
@@ -331,12 +331,6 @@ div#container:has(.sesiones) {
     background-color: var(--dark-color-transparent);
     border-radius: var(--radius-small);
     position: relative; 
-    animation: slideInFromLeft ease-in-out both;
-    /* 
-    animation-timeline: scroll();
-    animation-timeline: view();
-    animation-range: entry;
-   */
 }
 
 .block .row {
@@ -345,16 +339,7 @@ div#container:has(.sesiones) {
 }
 
 .block:has(.row.center){
-    animation: slideInFromRight 0.8s ease-in-out both;
-}
-
-.block:has(.row.reverse){
-    animation: slideInFromRight ease-in-out both;
-    /* 
-    animation-timeline: scroll();
-    animation-timeline: view();
-    animation-range: entry;
-   */
+    animation: slideInFromRight 0.8s ease-in-out;
 }
 
 .block .content-inner-left,
@@ -423,16 +408,6 @@ div#container:has(.sesiones) {
     .block .row.center div {
         padding: 40px 20px 0;
     }
-}
-
-@keyframes slideInFromLeft {
-  0% {
-    transform: translateX(-100%);
-  }
-  80% {
-    transform: translateX(0);
-    opacity: 1;
-  }
 }
 
 @keyframes slideInFromRight {
